🔨 update swagger for get all
